Implementing token reuse rule for 6 hours

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=trivia-web-app-backend
 server.port=8080
 
-# Swagger configuration
+# Swagger
 springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
+# Cache
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=expireAfterWrite=6h
+
+# URLs
 url.external.api.tdb=https://opentdb.com
