Adding exception and log layer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.cache.type=caffeine
 spring.cache.caffeine.spec=expireAfterWrite=6h
 
 # URLs
-url.external.api.tdb=https://opentdb.com
+# url.external.api.tdb=https://opentdb.com
